Adding header, hero, quotes sections

--- a/index.html
+++ b/index.html
@@ -4,13 +4,144 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
+  <title>Vet Clinic</title>
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+  <!-- SITE-HEADER -->
 
+  <header class="site-header">
+    <div class="site-header__top">
+      <div class="site-header__container container">
+        <address class="address">г. Мариуполь, проспект Победы, 48а</address>
+
+        <div class="phones">
+          <ul class="phones__list">
+            <li class="phones__item">
+              <a class="phones__link" href="tel:(067) 634 -75 - 74" aria-label="Call to phone number">(067) 634 -75 -
+                74</a>
+            </li>
+
+            <li class="phones__item">
+              <a class="phones__link" href="tel:(0637) 57 - 01 - 31" aria-label="Call to phone number">(0637) 57 - 01 -
+                31</a>
+            </li>
+
+            <li class="phones__item">
+              <a class="phones__link" href="tel:(098) 266 - 43 - 89" aria-label="Call to phone number">(098) 266 - 43 -
+                89</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="working-times">
+          <ul class="working-time__list">
+            <li class="working-time__item" aria-label="Working times">Пн - Пт 8:00 - 18:00</li>
+            <li class="working-time__item" aria-label="Working times">Сб - Вс 8:00 - 14:00</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="site-header__inner">
+      <div class="site-header__container container">
+        <div class="logo-wrapper">
+          <a class="logo" href="./">
+            <img src="./img/logo.svg" width="178" height="87" alt="Vet Clinic logo">
+          </a>
+        </div>
+
+        <nav class="sitenav">
+          <ul class="sitenav__list">
+            <li class="sitenav__item sitenav__item--active">
+              <a class="sitenav__link" href="./">Главная</a>
+            </li>
+
+            <li class="sitenav__item">
+              <a class="sitenav__link" href="#">О Клинике</a>
+            </li>
+
+            <li class="sitenav__item">
+              <a class="sitenav__link" href="#">Наши Услуги</a>
+            </li>
+
+            <li class="sitenav__item">
+              <a class="sitenav__link" href="#">Полезные Статьи</a>
+            </li>
+
+            <li class="sitenav__item">
+              <a class="sitenav__link" href="#">FAQ</a>
+            </li>
+
+            <li class="sitenav__item">
+              <a class="sitenav__link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="question-link-wrapper">
+          <a class="question-link" href="#">Задать вопрос</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+
+  <!-- SITE-CONTENT -->
+
+  <main class="site-content">
+    <!-- HERO -->
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero__inner">
+          <div class="hero__wrapper">
+            <h1 class="hero__heading heading heading--primary">Мы заботимся о <span>ваших питомцах!</span></h1>
+            <p class="hero__text">Вам и Вашему любимцу множество услуг по диагностике, профилактике заболеваний по
+              лечению и уходу за Вашими животными. Профессионалы работающие в нашей клинике сделают все для того, чтобы
+              быстро, эффективно и максимально безболезненно выполнить любие процедуры, которые необходимы Вашему
+              домашнему любимцу.</p>
+            <a class="btn btn--dark" href="#">Наши услуги</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- QUOTES -->
+
+    <section class="quotes">
+      <div class="container quotes__container">
+          <div class="quotes__text">
+            <blockquote class="quote">
+              <p class="quote__text">Наша ветеринарная клиника готова уделить максимум внимания Вам и Вашему питамцу.
+                Здоровье и благополучие Ваших животных очень важно для нас и мы стремимся оказать наилучшую возможную
+                ветеринарную помощь.</p>
+            </blockquote>
+
+            <strong class="quotes__author">Оржоникидзевская Ветеринарная клиника</strong>
+          </div>
+      </div>
+    </section>
+
+
+    <!-- SERVICES -->
+
+    <section class="services">
+      
+    </section>
+  </main>
+
+
+  <!-- SITE-FOOTER -->
+
+  <footer class="site-footer">
+    <div class="container">
+      <div class="site-footer__inner"></div>
+    </div>
+  </footer>
 </body>
 
 </html>
