--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vet Clinic</title>
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/styles.min.css">
+  <!-- <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/main.css"> -->
 </head>
 
 <body>
@@ -382,7 +383,7 @@
     <section class="contact">
       <div class="container">
         <div class="contact__inner">
-          <iframe class="contact__map" src="https://yandex.com/map-widget/v1/-/CCUeMKvHkC" allowfullscreen></iframe>
+          <iframe class="contact__map" src="https://yandex.com/map-widget/v1/-/CCUeMKvHkC" loading="lazy" allowfullscreen></iframe>
 
           <div class="contact__wrapper">
             <h2 class="contact__heading heading heading--secondary">Обратная связь</h2>
