Adding services page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vet Clinic</title>
-  <link rel="stylesheet" href="css/styles.min.css">
-  <!-- <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/main.css"> -->
+  <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
+  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <div class="site-header__container container">
         <address class="address">г. Мариуполь, проспект Победы, 48а</address>
 
-        <div class="phones">
+        <div class="phones phones--horizontal">
           <ul class="phones__list">
             <li class="phones__item">
               <a class="phones__link" href="tel:(067)634-75-74" aria-label="Call to phone number">(067) 634 -75 -
@@ -37,7 +37,7 @@
           </ul>
         </div>
 
-        <div class="working-times">
+        <div class="working-times working-times--horizontal">
           <ul class="working-time__list">
             <li class="working-time__item">Пн - Пт 8:00 - 18:00</li>
             <li class="working-time__item">Сб - Вс 8:00 - 14:00</li>
@@ -61,23 +61,23 @@
             </li>
 
             <li class="sitenav__item">
-              <a class="sitenav__link" href="#">О Клинике</a>
+              <a class="sitenav__link" href="./about.html">О Клинике</a>
             </li>
 
             <li class="sitenav__item">
-              <a class="sitenav__link" href="#">Наши Услуги</a>
+              <a class="sitenav__link" href="./services.html">Наши Услуги</a>
             </li>
 
             <li class="sitenav__item">
-              <a class="sitenav__link" href="#">Полезные Статьи</a>
+              <a class="sitenav__link" href="./articles.html">Полезные Статьи</a>
             </li>
 
             <li class="sitenav__item">
-              <a class="sitenav__link" href="#">FAQ</a>
+              <a class="sitenav__link" href="./faq.html">FAQ</a>
             </li>
 
             <li class="sitenav__item">
-              <a class="sitenav__link" href="#">Контакты</a>
+              <a class="sitenav__link" href="./contacts.html">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -425,25 +425,25 @@
             </li>
 
             <li class="footer-nav__item">
-              <a class="footer-nav__link" href="#">О Клинике</a>
+              <a class="footer-nav__link" href="./about.html">О Клинике</a>
             </li>
 
             <li class="footer-nav__item">
-              <a class="footer-nav__link" href="#">Наши Услуги</a>
+              <a class="footer-nav__link" href="./services.html">Наши Услуги</a>
             </li>
           </ul>
 
           <ul class="footer-nav__list">
             <li class="footer-nav__item">
-              <a class="footer-nav__link" href="#">Полезные Статьи</a>
+              <a class="footer-nav__link" href="./articles.html">Полезные Статьи</a>
             </li>
 
             <li class="footer-nav__item">
-              <a class="footer-nav__link" href="#">FAQ</a>
+              <a class="footer-nav__link" href="./faq.html">FAQ</a>
             </li>
 
             <li class="footer-nav__item">
-              <a class="footer-nav__link" href="#">Контакты</a>
+              <a class="footer-nav__link" href="./contacts.html">Контакты</a>
             </li>
           </ul>
         </div>
