Adding faq page

--- a/services.html
+++ b/services.html
@@ -83,7 +83,7 @@
           </ul>
         </nav>
 
-        <a class="question-link modal-open" href="#">Задать вопрос</a>
+        <a class="question-link modal-open" href="./question.html">Задать вопрос</a>
       </div>
     </div>
   </header>
